--- a/src/BenchERD.ipynb
+++ b/src/BenchERD.ipynb
@@ -208,7 +208,7 @@
     {
      "data": {
       "text/plain": [
-       "'BenchER - Benchmark for ER-models.gv.svg'"
+       "'BenchERD - Benchmark for ER-model Diagram.gv.svg'"
       ]
      },
      "execution_count": 8,
@@ -217,7 +217,7 @@
     }
    ],
    "source": [
-    "dot = graphviz.Digraph('BenchER - Benchmark for ER-models', comment='Author: Moskalev Dmitry', format='svg')  \n",
+    "dot = graphviz.Digraph('BenchERD - Benchmark for ER-model Diagram', comment='Author: Moskalev Dmitry', format='svg')  \n",
     "tables_per_schema = {k: v for k, v in tables_per_schema.items() if len(v) != 0}\n",
     "\n",
     "for i in result.index:\n",
@@ -263,7 +263,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
-  "title": "BenchER"
+  "title": "BenchERD"
  },
  "nbformat": 4,
  "nbformat_minor": 5
